image width default added to prevent too large images from expanding beyond container

--- a/dev/styles.css
+++ b/dev/styles.css
@@ -78,6 +78,10 @@ h4{
   margin-bottom: .75rem;
 }
 
+li>img {
+  width: 100%;
+}
+
 section {
   margin-bottom: 1rem;
   margin-top: 1rem;
